Updated to 1.20.6: compiles but no testing
No further 1.20.6 dev; straight to 1.21!