@@ -17,11 +17,13 @@
 
 package me.desht.pneumaticcraft.common.drone.progwidgets;
 
-import com.google.common.collect.ImmutableList;
+import com.mojang.serialization.MapCodec;
+import com.mojang.serialization.codecs.RecordCodecBuilder;
+import me.desht.pneumaticcraft.api.drone.IDrone;
+import me.desht.pneumaticcraft.api.drone.IProgWidget;
 import me.desht.pneumaticcraft.api.drone.ProgWidgetType;
-import me.desht.pneumaticcraft.common.drone.IDroneBase;
 import me.desht.pneumaticcraft.common.drone.ai.DroneAIEnergyExport;
-import me.desht.pneumaticcraft.common.registry.ModProgWidgets;
+import me.desht.pneumaticcraft.common.registry.ModProgWidgetTypes;
 import me.desht.pneumaticcraft.lib.Textures;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.entity.ai.goal.Goal;
@@ -30,18 +32,30 @@ import net.minecraft.world.item.DyeColor;
 import java.util.List;
 
 public class ProgWidgetEnergyExport extends ProgWidgetInventoryBase {
+    public static final MapCodec<ProgWidgetEnergyExport> CODEC = RecordCodecBuilder.mapCodec(builder ->
+        invParts(builder).apply(builder, ProgWidgetEnergyExport::new)
+    );
 
     public ProgWidgetEnergyExport() {
-        super(ModProgWidgets.RF_EXPORT.get());
+        this(PositionFields.DEFAULT, InvBaseFields.DEFAULT);
+    }
+
+    public ProgWidgetEnergyExport(PositionFields positionFields, InvBaseFields invBaseFields) {
+        super(positionFields, invBaseFields);
     }
 
     @Override
     public List<ProgWidgetType<?>> getParameters() {
-        return ImmutableList.of(ModProgWidgets.AREA.get());
+        return List.of(ModProgWidgetTypes.AREA.get());
     }
 
     @Override
-    public Goal getWidgetAI(IDroneBase drone, IProgWidget widget) {
+    public ProgWidgetType<?> getType() {
+        return ModProgWidgetTypes.RF_EXPORT.get();
+    }
+
+    @Override
+    public Goal getWidgetAI(IDrone drone, IProgWidget widget) {
         return new DroneAIEnergyExport(drone, (ProgWidgetInventoryBase) widget);
     }
 
